--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
       <section class="home bd_grid" id="home">
         <div class="home_data" data-aos="fade-down">
           <h1 class="home_title">
-            Salut! <br />Je suis <span class="home_title-color">Ismaïl KRAMDI,</span
+            Salut! <br />Je suis <span class="home_title-color">Ismaïl,</span
             ><br />étudiant passionné par l'informatique
           </h1>
           <a href="#contact" class="button"> Contact</a>
         </div>
 
-        <div class="home_social">
+        <div>
           <a
           href="https://www.instagram.com/isury.apk/"
           target="_blank"
@@ -365,7 +365,7 @@
               data-aos="fade-down"
               data-aos-delay="350"
             >
-              Je suis Ismaïl KRAMDI BOUZOUADA
+            L'informatique, ma passion
             </h2>
             <p class="about_text" data-aos="fade-down" data-aos-delay="450">
               Depuis que j'ai découvert la programmation, j'ai développé un fort intérêt pour la création de sites web, d'applications mobiles et de jeux vidéo. J'aime travailler avec différents langages de programmation tels que Python, JavaScript et C++, et j'ai acquis pas mal de notions dans ces domaines. Je suis particulièrement fasciné par les possibilités offertes par la programmation web et les applications mobiles pour résoudre des problèmes réels et améliorer l'expérience utilisateur. Par ailleurs, je suis également très intéressé par le domaine de la cybersécurité. Je suis convaincu que la sécurité des systèmes informatiques est primordiale et je suis passionné par l'étude des différentes méthodes de protection contre les attaques et les menaces. Et j'espère pouvoir continuer à explorer ces domaines et à contribuer à l'avancement de l'informatique et de la technologie.
