--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
           </div>
 
           <div class="work_img">
-            <a href="https://isuryhub.github.io/compteur_de_temps_perdu/index.html" target="_blank"><img src="./assets/img/cansado.png" alt="" /></a>
+            <a href="https://isuryhub.github.io/site_compteur_de_temps_perdu/" target="_blank"><img src="./assets/img/cansado.png" alt="" /></a>
           </div>
         </div>
       </section>
