--- a/index.html
+++ b/index.html
@@ -688,6 +688,11 @@
             <a href="https://isuryhub.github.io/site_compteur_de_temps_perdu/" target="_blank"><img src="./assets/img/cansado.png" alt="" /></a>
           </div>
         </div>
+
+        <div class="work_img">
+          <a href="https://github.com/ISURYHUB/ruche_connecte" target="_blank"><img src="./assets/img/arduino.jpg" alt="" /></a>
+        </div>
+      </div>
       </section>
       <br>
       <br>
