--- a/index.html
+++ b/index.html
@@ -690,8 +690,9 @@
         </div>
 
         <div class="work_img">
-          <a href="https://github.com/ISURYHUB/ruche_connecte" target="_blank"><img src="./assets/img/arduino.jpg" alt="" /></a>
+          <a href="https://github.com/ISURYHUB/ruche_connecte" target="_blank"><img src="./assets/img/arduino.png" alt="" /></a>
         </div>
+        
       </div>
       </section>
       <br>
