--- a/index.html
+++ b/index.html
@@ -687,16 +687,12 @@
           <div class="work_img">
             <a href="https://isuryhub.github.io/site_compteur_de_temps_perdu/" target="_blank"><img src="./assets/img/cansado.png" alt="" /></a>
           </div>
-        </div>
 
-        <div class="work_img">
-          <a href="https://isuryhub.github.io/site_MDL_Camus_Sermenaz/index.html" target="_blank"><img src="./assets/img/MDL.jpg" alt="" /></a>
-        </div>
+          <div class="work_img">
+            <a href="https://github.com/ISURYHUB/ruche_connecte" target="_blank"><img src="./assets/img/arduino.png" alt="" /></a>
+          </div>
 
-        <div class="work_img">
-          <a href="https://isuryhub.github.io/site_compteur_de_temps_perdu/" target="_blank"><img src="./assets/img/cansado.png" alt="" /></a>
         </div>
-      </div>
 
       </div>
       </section>
