--- a/index.html
+++ b/index.html
@@ -692,6 +692,17 @@
             <a href="https://github.com/ISURYHUB/ruche_connecte" target="_blank"><img src="./assets/img/arduino.png" alt="" /></a>
           </div>
 
+          <div class="work_img">
+            <a href="https://isury.itch.io/bubblewar_rpg" target="_blank"><img src="./assets/img/buuble.png" alt="" /></a>
+          </div>
+
+          <div class="work_img">
+            <a href="https://isury.itch.io/the_valley_rpg" target="_blank"><img src="./assets/img/1.png" alt="" /></a>
+          </div>
+
+          <div class="work_img">
+            <a href="https://isury.itch.io/isury" target="_blank"><img src="./assets/img/LOGO.png" alt="" /></a>
+          </div>
         </div>
 
       </div>
