--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
           </div>
 
           <div class="work_img">
-            <a href="https://isury.itch.io/bubblewar_rpg" target="_blank"><img src="./assets/img/buuble.png" alt="" /></a>
+            <a href="https://github.com/ISURYHUB/cryptographie_simple" target="_blank"><img src="./assets/img/crypto.png" alt="" /></a>
           </div>
 
           <div class="work_img">
